2011-06-15  Ivan Maidanski <ivmai@mail.ru>

	* configure.ac, README: Change to version 7.2alpha7.
	* configure: Regenerate.

[7.2alpha6]

2011-06-14  Ivan Maidanski  <ivmai@mail.ru>

	* configure.ac, README: Change to version 7.2alpha6.
	* configure: Regenerate.

2011-06-07  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/gcc/arm.h (AO_nop_full, AO_load): Do not
	define for pre-ARMv6 directly (revert part of the previous
	commit).
	* src/atomic_ops/sysdeps/gcc/arm.h (AO_test_and_set,
	AO_test_and_set_full): Refine the comment.
	* src/atomic_ops/sysdeps/gcc/arm.h (AO_test_and_set_full): Define
	SWP-based implementation at the end of file (if none of
	AO_test_and_set functions are defined previously).
	* src/atomic_ops/sysdeps/gcc/arm.h (AO_test_and_set): Remove
	SWP-based implementation (revert part of the previous commit).
	* src/atomic_ops/sysdeps/gcc/arm.h (AO_store): Remove redundant
	definition at the file end (revert part of the previous commit).

2011-06-07  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/gcc/arm.h: Handle ARMv6M architecture.
	* src/atomic_ops/sysdeps/gcc/arm.h (AO_test_and_set): Force "swp"
	instruction usage (instead of ldrex/strex) if AO_FORCE_USE_SWP;
	add a comment.
	* src/atomic_ops/sysdeps/gcc/arm.h
	(AO_compare_double_and_swap_double): Handle ARMv7EM architecture
	(similar to ARMv7M).
	* src/atomic_ops/sysdeps/gcc/arm.h (AO_test_and_set, AO_nop_full,
	AO_load, AO_store): Define at the end of file (in case not defined
	previously).

2011-06-07  Ivan Maidanski  <ivmai@mail.ru>

	* src/atomic_ops/generalize.h: Reformat code.
	* src/atomic_ops/generalize.h (AO_test_and_set_acquire): Fix
	return type.
	* src/atomic_ops/sysdeps/armcc/arm_v6.h (AO_test_and_set): Ditto.
	* src/atomic_ops/sysdeps/gcc/arm.h (AO_test_and_set): Ditto.
	* src/atomic_ops/sysdeps/gcc/arm.h (AO_test_and_set): Add
	a comment (about SWP instruction).

2011-06-06  Ivan Maidanski  <ivmai@mail.ru>
